After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772706 - adaptivedemux: fix buffer size print format
adaptivedemux: fix buffer size print format
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.10.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-10 15:03 UTC by Arnaud Vrac
Modified: 2016-10-31 14:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
adaptivedemux: fix buffer size print format (1.05 KB, patch)
2016-10-10 15:03 UTC, Arnaud Vrac
committed Details | Review

Description Arnaud Vrac 2016-10-10 15:03:43 UTC
Created attachment 337331 [details] [review]
adaptivedemux: fix buffer size print format

Fixes wrong values being printed on 32-bits arch.
Comment 1 Tim-Philipp Müller 2016-10-11 08:59:44 UTC
Thanks1

commit e8b24f9189518408e266cd78f7bb9385a6d78b6f
Author: Arnaud Vrac <avrac@freebox.fr>
Date:   Mon Oct 10 17:00:39 2016 +0200

    adaptivedemux: fix buffer size print format
    
    https://bugzilla.gnome.org/show_bug.cgi?id=772706