adaptivedemux: fix buffer size print format

https://bugzilla.gnome.org/show_bug.cgi?id=772706